# aclspv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: build-and-test.yml
cfg/: aclspv.cmake.in  aclspvABI.cmake.in
inc/: aclspv.h
inc/aclspv/: abi.h  argknd.h  build.h  compiler.h  lnker.h  md.h  obj.h  pass.h  spvty.h
lib/: aclspv.c  aclspv.cc  build.c  build.h  compiler-args.h  compiler.auto.h  compiler.c  compiler.cc  compiler.h  lnker.c  obj.c  obj.cc  pass.c
lib/attr/: location.h  specid.h  storage_class.h
lib/emit/: count_fn.h  decl_glob_obj.h  entp_body.h  expr.h
lib/impl/: asm.h  conf.h
lib/pass/: add_kern_metadata.c  alloc_descriptor.c  arg_anal.c  assgn_pipelayout.c  check_mem_access.c  cluster_pod_args.c  cluster_pod_kern_args.c  ctx.h  dead_store_del.c  default_layout.c  direct_rsc_access.c  emit_bltin_decl.c  emit_metadata.c  fix_mem_access.c  fixup_struct_cfg.c  glob_dce.c  glob_opt.c  infer_addr_space.c  inline_entp.c  inline_func.c  loc_mem.c  longvec_lower.c  lower_opq_ptr.c  md.h  mkspv.c  rep_cl_bltin.c  rep_ptr_bitcast.c  rewr_kern_fn.c  rewr_loc_ptr.c  scale.h  sclrse_masked_mem_intrin.c  set_spec_const_default_val.c  simplify_ptr_bitcast.c  spirv_bltin_lower.c  spirv_lower_bool.c  spirv_lower_constexpr.c  spirv_lower_memset.c  spirv_prepare_fn.c  splat_arg.c  srao.c  (+1 more)
lib/util/: bind.h  constant.h  ctx.h  cursor.h  decl_bind.c  decl_entp.c  decl_fn.c  decl_wrkgroup.c  def_entp.c  emitx.h  entp.h  fetch_bind.c  fn.h  id.h  iddef.h  is_kernel.h  llvmtospv.h  scale.h  type_unique.h  wrdemit.h
src/: compiler.def.c  compiler.def.cc  ocl.h  source.cl  vec.c
src/pass/: ctx.c
src/util/: u32_to_hex8.c
src/util/constant/: ptr.c
test/: build-nothing.c  build.c  pass-nothing.c  pass.c
test/lifespan/: compiler-run.c  compiler.c  lnkr.c
test/util/: scale.c
